Add simulation example and expand on discrete choice models in lecture materials

--- a/lectures/05_regression_1.tex
+++ b/lectures/05_regression_1.tex
@@ -574,6 +574,14 @@
   \includegraphics[width=\linewidth]{images/abadiecluster.png}
 \end{frame}
 
+\begin{frame}{Example simulation code}
+  \url{https://gist.github.com/paulgp/6d8a0c452bc8a0da7f4c054314d7e59e}
+\end{frame}
+
+\begin{frame}
+  \includegraphics{images/simulation_results.jpg}
+\end{frame}
+
 
 \begin{frame}{Takeaways from paper}
 \begin{columns}[T] % align columns
