--- a/homework/homework6.tex
+++ b/homework/homework6.tex
@@ -84,6 +84,8 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
         Construct a variable $D_{it} = 1(E_{i} <= t)$ which is equal to
         one when an individual is treated. What share of individuals are
         treated in period 7,8,9,10?
+
+        \hspace{10pt} $\rightarrow$ Report the share treated in period 9 as   \texttt{problem\_1a} in your code.  
       \item Estimate the traditional static two-way fixed effects
         estimation for this setup:
         \begin{equation}\label{eq:twfe}
@@ -93,6 +95,8 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
         fixed effect and $\lambda_{t}$ is a time fixed effect. Report the
         estimate for $\beta$ and its standard error (adjust for
         appropriate inference in the panel setting). 
+
+        \hspace{10pt} $\rightarrow$ Report the estimate for beta as   \texttt{problem\_1b} in your code.  
       \item Now, consider the estimation group by group. Denote our
         control group as the last group ever treated. For each other
         treated wave, estimate the treatment effect relative to this
@@ -100,8 +104,9 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
         and standard errors for each of these waves. How do these
         estimates compare to your last result? For Wave 8 cohort, what is the
         relative comparison period for the diff-in-diff? In other words,
-        the diff across units is Cohort Wave 8 vs. Cohort Wave 11. What is the diff
-        across time comparing?
+        the diff across units is Cohort Wave 8 vs. Cohort Wave 11. What is the diff across time comparing?
+
+        \hspace{10pt} $\rightarrow$ Report the estimate for the treatment effect for Wave 8 as   \texttt{problem\_1c} in your code. 
       \item Now thing back to the traditional static equation -- what is
         the relative comparison period for this diff-in-diff? 
       \item We now consider the dyanamic versions of Equation
@@ -110,6 +115,8 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
           Y_{it} = \alpha_{i} + \lambda_{t} + \sum_{l \in -3,-2} D^{l}_{it}\beta_{l} +  \sum_{l \in 0,1,2,3} D^{l}_{it}\beta_{l} + \epsilon_{it}.
         \end{equation}
         Report the $\beta$ coefficients and their standard errors.
+      
+        \hspace{10pt} $\rightarrow$ Report the estimate for the $\beta_{0}$  as   \texttt{problem\_1e} in your code. 
       \item Now, repeat this exercise, but consider the estimation
         group-by-group again. Focusing just on the Cohort Wave 8
         vs. Cohort Wave 11 comparison, how would you run the above
@@ -117,6 +124,8 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
         these estimates. Now repeat and estimate $\beta_{0}$ for each of
         the groups. How do these estimates compare to your estimates from
         Equation \ref{eq:twfe_dyn}?
+
+        \hspace{10pt} $\rightarrow$ Report the estimate for the $\beta_{0}$  for Wave 8 as   \texttt{problem\_1f} in your code. 
       \item Now focus on the estimate for $\beta_{-2}$ from Equation
         \ref{eq:twfe_dyn}. This is traditionally the pre-trend test. Sun
         and Abraham show that under the standard diff-in-diff assumptions,
@@ -146,17 +155,48 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
         $\mu_{0}$ weights each of these $\delta$ by the cohort sample
         weight $\pi_{e} = Pr(E_{i} = e | l = 0)$. Report this estimate of
         $\mu_{0}$.
+
+        \hspace{10pt} $\rightarrow$ Report the estimate for $\mu_{0}$ as \texttt{problem\_1h} in your code. 
       \end{enumerate}
-    \item \textbf{Synthetic Control:} We now implement the synthetic methods approach. In Stata, you should use the \texttt{sdid} package (\url{https://github.com/Daniel-Pailanir/sdid}) and in R use the \texttt{synthdid} package (\url{https://synth-inference.github.io/synthdid/}). 
+    \item \textbf{Synthetic Methods Part I:} We now implement the synthetic methods approach. You should use the \texttt{synthdid} package (\url{https://synth-inference.github.io/synthdid/}). 
     \begin{enumerate}
     \item First, we will replicate the main \textbf{synthetic control} effect of California's Prop 99 on cigarette consumption. Setup the data following the vignette for the package. Report the treatment effect for the synthetic control. (note, this is not the main \texttt{synthdid} estimator). 
+    
+    \hspace{10pt} $\rightarrow$ Report the estimate as   \texttt{problem\_2a} in your code. 
     \item Now, estimate the effect using the \texttt{synthdid} estimator. Report the treatment effect and compare to the synthetic control effect.
+    
+    \hspace{10pt} $\rightarrow$ Report the estimate as   \texttt{problem\_2b} in your code. 
     \item Take a look at the weights for the synthetic control. What variables are most important in the synthetic control? How do these weights compare to the weights in the synthetic did estimator? (In R, this is done by looking at the summary command for the estimate)
+    
     \item Now, let's use a new package from Cattaneo et al. \url{https://nppackages.github.io/scpi} to estimate the effect of the California Prop 99. You can find an example of the setup here: \url{https://github.com/nppackages/scpi/blob/main/R/scpi_illustration.R}. Implement the simplex version of SC. (Hint: the estimate returned by the function has a value `est.results' that includes the year-by-year synthetic values `Y.post.fit'. These are the synthetic california values. Contrast these with the actual values of california in the post period, and take the overall mean over the period). Contrast this with the original synthetic control estimate from synthdid (they should be close but likely not identical). 
-    \item Now, estimate the prediction intervals from Cattaneo et al. (see the documentation) for discussion. Just use the defaults for the prediction intervals. Report the synthetic value estimate and  left and right bound for synthtic california in 2000, and compare whether the true value is in that interval.
+    
+    \hspace{10pt} $\rightarrow$ Report the difference in the two estimates as   \texttt{problem\_2c} in your code. 
+    \item Now, estimate the prediction intervals from Cattaneo et al. (see the documentation) for discussion. Just use the defaults for the prediction intervals. Report the synthetic value estimate and  left and right bound for synthetic california in 2000, and compare whether the true value is in that interval.
+    
+    \hspace{10pt} $\rightarrow$ Report the synthetic california estimate in 2000 as   \texttt{problem\_2d} in your code. 
     \item Finally, consider a placebo test. Pretend the treatment was in 1985, and rerun the estimation procedure. Prior to 1989, is the synthetic California significantly different from the actual California?  (you can plot this using `sc\_plot')
+    
+    \hspace{10pt} $\rightarrow$ Report the test for whether actual california is inside the confidence intervals for synthetic california as of 1988 as \texttt{problem\_2e} in your code. 
     \item Report the estimate and  left and right bounds of synthetic california in 2000 in this version. 
-    \item If you are feeling ambitious (not required), try playing around with other robustness results and see if you can account for the pre-trend differences.
+    
+    \hspace{10pt} $\rightarrow$ Report the difference between this estimate and part 2d as \texttt{problem\_2f} in your code. 
+    \end{enumerate}
+    \item \textbf{Synthetic Methods Part II:} We now implement the synthetic approach to replicate the results from Figure 3  and Table 2 of Wolfers (2006). We will be using the \texttt{wolfers\_aer\_clean.csv} dataset. This dataset has been cleaned to account for panel imbalances, and so the panel is slightly smaller than the original (48 states, and focusing on 1959-1990 to avoid missing data (create a balanced panel)). We will focus on just estimating the effects after the treatment -- you can ignore the pre-trend tests. This assignment will use the \texttt{synthdid} package in R.
+    \begin{enumerate}
+      \item First, load the dataset into R.  Note that this is a \emph{staggered} design, studying the impact of divorce laws on the divorce rate. \texttt{st} denotes the unit (state), \texttt{year} denotes year, the outcome is \texttt{div\_rate} and the treatment indicator is \texttt{unilateral}. The year of the divorce law is \texttt{lfdivlaw}. If a state is not yet treated by the end of the sample, this is denoted as \texttt{lfdivlaw} = 2000. Report the distribution of treatment timings. What two years have the largest share of divorce laws passed?
+
+      \hspace{10pt} $\rightarrow$ Report the share of treated units who are treated in 1971 as \texttt{problem\_3a} in your code. 
+      \item The synthdid package is not set up for staggered designs (nor for reporting point-by-point estimates). We will build up from scratch. 
+      Using the states who are treated in 1971, or never treated, estimate the overall synthdid estimate, using those treated in 1971 as the treated unit. Report the overall estimated effect.
+
+      \hspace{10pt} $\rightarrow$ Report the overall estimated effect.as \texttt{problem\_3b} in your code. 
+      \item Now, using the states who are treated in 1971, or never treated, estimate the dynamic effect following Wolfers (2006). This means you should estimate the effect in the first two years (1971 and 1972), then the next two years (1973 and 1974), up until 15 years after, where you should pool all the years together. Report the estimated effects and compare them to Table 2 of Wolfers. How do the point-estimates compare? If you implement standard errors, does the Wolfers' estimates lie within the 95\% confidence interval?
+      
+      \hspace{10pt} $\rightarrow$ Report the absolute difference between the Column 1 Row 2 estimate in Table 2 of Wolfers (2006) and your estimate in the same time period as \texttt{problem\_3c} in your code. 
+      \item Now, implement this approach for each of the years where treatments fall (always using the untreated states as controls). Combine these estimates into a single estimate using the relative share of each treatment timing. You should ignore the state that is always treated. How does this compare to Table 2 of Wolfers? 
+      
+      \hspace{10pt} $\rightarrow$ Report the absolute difference between the Column 1 Row 2 estimate in Table 2 of Wolfers (2006) and your estimate in the same time period as \texttt{problem\_3d} in your code. 
+      \item Wolfers (2006) concludes ``I find that the divorce rate rose sharply following the adoption of unilateral divorce laws, but that this rise was reversed within about a decade. There is no evidence that this rise in divorce is persistent.'' Are your results consistent with that?
     \end{enumerate}
 \end{enumerate}
 \end{document}
