--- a/homework/homework1.tex
+++ b/homework/homework1.tex
@@ -65,19 +65,18 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
   MGMT 737
 \end{center}
 \begin{center}
-  Spring 2024
+  Spring 2025
 \end{center}
 %\date{September 26, 2014}
 
 You should have gotten this homework assignment from the Github classroom environment (\url{https://classroom.github.com/classrooms/192971645-yale-mgmt-737-spring-2025-classroom}). In submitting your problem set, you should have two files in your Github repository:
 
 \begin{enumerate}
-  \item \texttt{homework1.R}, which contains your code,
-  \item  \texttt{homework1.md}, which contains your writeup.
-\end{enumerate} and \texttt{homework1.R} or \texttt{homework1.py}. The first file should be a PDF file that contains your answers to the problem set. The second file should contain the code you used to generate your answers. You can use any other files you want, but they should not be in the Github repository.
+  \item \texttt{homework1-code.R}, which contains your code,
+  \item \texttt{homework1-writeup.pdf}, which contains your writeup 
+\end{enumerate} 
 
-
-This problem set is expected to be coded in either \texttt{R} or \texttt{Python} (\texttt{R} is  recommended). 
+You may have other files / folders if necessary when there are images or auxiliary files. My very strong preference is for you to write this up in R. If this is not possible, you can use Python. Please let me know if you're planning on this. (This is not a coding preference, but mainly a grading issue.)
 
 \begin{enumerate}
 \item Randomization. This analysis will use the Dehijia
@@ -87,9 +86,13 @@ This problem set is expected to be coded in either \texttt{R} or \texttt{Python}
   \texttt{treat}. The remaining variables are potential covariates. Assume for the purposes of this problem set that $\texttt{treat}$ is completely randomly assigned. 
   \begin{enumerate}
   \item Calculate the average treatment effect of the policy
-    $E(\tau_{i})$ using a simple difference in means.
+    $E(\tau_{i})$ using a simple difference in means. 
+
+    \hspace{10pt} $\rightarrow$ Label the calculated value as \texttt{tau\_ate} in your code.
   \item Calculate the average treatment effect on the treated of the policy
     $E(\tau_{i}| \mathrm{treat} = 1)$. How does it compare to part a? 
+   
+    \hspace{10pt} $\rightarrow$ Label the calculated value as \texttt{tau\_att} in your code.
   \item Test the null of $\tau_{i} = 0$ for all $i$ using a
     randomization test. \\
     \emph{N.B.} Hold fixed the number of treated and control
@@ -97,9 +100,13 @@ This problem set is expected to be coded in either \texttt{R} or \texttt{Python}
     the labels randomly 1000 times -- you do not need to fully do
     every permutation (there would be too many). Report the quantile
     that your estimate from the previous question falls.
+
+    \hspace{10pt} $\rightarrow$ Label the quantile value that \texttt{tau\_att} falls into as \texttt{tau\_att\_quantile} in your code.
   \item Run a regression using robust standard errors (you may use
     canned software) of the outcome on the treatment dummy, and
     compare the p-values from this test to the previous answer.
+
+  \hspace{10pt} $\rightarrow$ Report the difference in the quantile values as \texttt{tau\_att\_quantile\_diff} in your code.
   \end{enumerate}  
 \end{enumerate}
 
